# config/packages/nelmio_api_doc.yaml
@@ -25,6 +25,30 @@ nelmio_api_doc:
             restaurant_owner_email:
               type: string
               example: romain@silvy.com
+            restaurant_owner_password:
+              type: string
+              example: bourgogne
+        RestaurantData:
+          type: object
+          properties:
+            restaurant_name:
+              type: string
+              example: Le petit resto
+            restaurant_latitude:
+              type: string
+              example: -3.790068
+            restaurant_longitude:
+              type: string
+              example: 60.269705
+            restaurant_description:
+              type: string
+              example: Un petit resto sympa
+            restaurant_phone:
+              type: string
+              example: 0123456789
+            idOwner:
+              type: integer
+              example: 101
         PictureData:
           type: object
           properties:
